# fastAPI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-build.yml  docs.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_init.py
diagnostics_lab/: __init__.py  celery_app.py  logging.py  main.py  security.py  seed.py  settings.py  tasks.py
diagnostics_lab/api/: deps.py
diagnostics_lab/api/routes/: auth.py  catalog.py  health.py  orders.py  patients.py
diagnostics_lab/db/: session.py  wait_for_db.py
diagnostics_lab/db/models/: __init__.py  catalog.py  order.py  patient.py  result.py  sample.py  user.py
diagnostics_lab/schemas/: auth.py  catalog.py  orders.py  patients.py  results.py  samples.py
docker/: entrypoint.sh
docs/: API.md  ARCHITECTURE.md  CELERY.md  CI_CD.md  DB.md  DOMAIN.md  GIT_WORKFLOW.md  PLAN.md  RUNNING.md  TESTING.md  index.md
tests/: conftest.py  test_api_smoke.py
