[project]
name = "fastapi-diagnostics-lab"
version = "0.1.0"
description = "FastAPI feature showcase (DB + Celery + Docker) in a diagnostics laboratory domain."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/alembic/**" = ["E402"]
"diagnostics_lab/api/**.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
